# services-database

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: database.py
nagare/admin/: alembic_commands.py  database_commands.py
nagare/database/: __init__.py  declarative.py  pickle.py
nagare/services/: database.py  database_exceptions.py
nagare/templates/alembic_nagare/: env.py
src/nagare/admin/: __init__.py  alembic_commands.py  database_commands.py
src/nagare/database/: __init__.py  declarative.py  pickle.py
src/nagare/services/: database.py  database_exceptions.py
src/nagare/templates/: __init__.py
src/nagare/templates/alembic_nagare/: env.py
tests/: global_test.py  manytomany_test.py  manytoone_test.py  onetomany_test.py  onetoone_test.py
