[metadata]
name = nagare-services-database
author = Net-ng
author_email = alain.poirier@net-ng.com
description = RDBM service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-database
    Tracker = https://github.com/nagareproject/services-database/issues

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    SQLAlchemy
    alembic
    zope.sqlalchemy
    nagare-services-transaction
    nagare-server

[options.entry_points]
nagare.commands =
    db = nagare.admin.database_commands:Commands

nagare.commands.db =
    create = nagare.admin.database_commands:Create
    drop = nagare.admin.database_commands:Drop
    init = nagare.admin.alembic_commands:Init
    stamp = nagare.admin.alembic_commands:Stamp
    revision = nagare.admin.alembic_commands:Revision
    upgrade = nagare.admin.alembic_commands:Upgrade
    downgrade = nagare.admin.alembic_commands:Downgrade
    current = nagare.admin.alembic_commands:Current
    history = nagare.admin.alembic_commands:History
    branches = nagare.admin.alembic_commands:Branches
    heads = nagare.admin.alembic_commands:Heads
    merge = nagare.admin.alembic_commands:Merge
    show = nagare.admin.alembic_commands:Show

nagare.services =
    database = nagare.services.database:Database

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
